--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,45 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 
-body{
+body {
     font-family: 'poppins', sans-serif;
     font-size: 16px;
 }
 
-.contenedor{
+.contenedor {
     width: 90%;
     max-width: 1080px;
     margin: 0 auto;
 }
 
-.titulo-seccion{
+.titulo-seccion {
     text-align: center;
     margin-bottom: 40px;
 }
 
-.titulo-seccion h2{
+.titulo-seccion h2 {
     color: #0089E0;
     font-size: 3.125rem;
     margin-bottom: 15px;
     font-weight: 500;
 }
 
-.titulo-seccion p{
+.titulo-seccion p {
     color: #979797;
     font-size: 1rem;
     font-weight: 400;
 }
+
 /*estilos de encabezado*/
 
-.menu-bar-pc{
+.menu-bar-pc {
     width: 100%;
     min-height: 68px;
-    border-bottom: 1px solid rgba(255,255,255, 0.15);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
     padding: 0 36px;
     background: transparent;
     display: flex;
@@ -49,17 +50,18 @@ body{
     z-index: 100;
 }
 
-.logo{
+.logo {
     display: inline-block;
     width: 50px;
 }
 
-.logo img{
+.logo img {
     width: 100%;
     vertical-align: top;
 }
 
-.menu-principal a, .top-redes a{
+.menu-principal a,
+.top-redes a {
     display: inline-block;
     padding: 0 10px;
     color: #fff;
@@ -71,24 +73,26 @@ body{
     transition: all .3s ease;
 }
 
-.menu-principal a:last-child, .top-redes a:last-child{
+.menu-principal a:last-child,
+.top-redes a:last-child {
     padding-right: 0;
 }
 
-.top-redes a i{
+.top-redes a i {
     font-size: 1rem;
 
 }
 
-.menu-principal a:hover, .top-redes a:hover{
+.menu-principal a:hover,
+.top-redes a:hover {
     color: #0089E0;
 
 }
 
-.fixed-header{
+.fixed-header {
     width: 100%;
     min-height: 68px;
-    border-bottom: 1px solid rgba(204,204,204,0.5);
+    border-bottom: 1px solid rgba(204, 204, 204, 0.5);
     padding: 0 36px;
     background: #fff;
     display: flex;
@@ -102,16 +106,18 @@ body{
     margin-top: -68px;
 }
 
-.fixed-header .menu-principal a, .fixed-header .top-redes a{
-    color:#444444 ;
+.fixed-header .menu-principal a,
+.fixed-header .top-redes a {
+    color: #444444;
 }
 
-.fixed-header .menu-principal a:hover, .top-redes a:hover{
+.fixed-header .menu-principal a:hover,
+.top-redes a:hover {
     color: #0089E0;
 }
 
 
-.menu-mobile{
+.menu-mobile {
     display: none;
 }
 
@@ -121,28 +127,28 @@ body{
 
 /*estilos de banner*/
 
-.main{
+.main {
     width: 100%;
     margin-top: -68px;
 }
 
-.main .banner-principal{
+.main .banner-principal {
     width: 100%;
     position: relative;
 }
 
-.main .banner-principal .banner{
-width: 100%;
-height: 100vh;
-background-image: url('../img/banner.jpg');
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
-background-attachment: fixed;
+.main .banner-principal .banner {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/banner.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 
 }
 
-.main .banner-principal .texto-banner{
+.main .banner-principal .texto-banner {
     display: inline-block;
     width: 90%;
     position: absolute;
@@ -153,21 +159,21 @@ background-attachment: fixed;
 
 }
 
-.main .banner-principal .texto-banner h2{
+.main .banner-principal .texto-banner h2 {
     font-weight: 300;
     color: #fff;
     margin-bottom: 20px;
 }
 
-.main .banner-principal .texto-banner h1{
+.main .banner-principal .texto-banner h1 {
     font-size: 6.0625rem;
     font-weight: 700;
-    line-height: 90px; 
+    line-height: 90px;
     color: #fff;
     margin-bottom: 30px;
 }
 
-.main .banner-principal .texto-banner a{
+.main .banner-principal .texto-banner a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 20px;
@@ -176,7 +182,7 @@ background-attachment: fixed;
     transition: all .7s ease;
 }
 
-.main .banner-principal .texto-banner a:hover{
+.main .banner-principal .texto-banner a:hover {
     background: #fff;
     color: #0089E0;
 
@@ -184,7 +190,7 @@ background-attachment: fixed;
 
 /* seccion proyectos*/
 
-.main .proyectos{
+.main .proyectos {
     background: #f3f4fA;
     padding: 108px 0 54px 0;
 }
@@ -200,13 +206,13 @@ background-attachment: fixed;
 
 }
 
-.main .proyectos .galeria-proyectos .proyectos{
+.main .proyectos .galeria-proyectos .proyectos {
     width: 32%;
     margin-bottom: 2%;
     cursor: pointer;
 }
 
-.main .proyectos .galeria-proyectos .proyectos img{
+.main .proyectos .galeria-proyectos .proyectos img {
     width: 100%;
     vertical-align: top;
 
@@ -217,34 +223,34 @@ background-attachment: fixed;
 
 
 /* acerca de */
-.main .acerca-de{
+.main .acerca-de {
     background: #f3f4fA;
 }
 
-.main .acerca-de .contenedor{
+.main .acerca-de .contenedor {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
 }
 
-.main .acerca-de .contenedor .titulo-seccion{
+.main .acerca-de .contenedor .titulo-seccion {
     width: 33.33%;
     text-align: left;
 
 }
 
-.main .acerca-de .contenedor .titulo-seccion h2{
+.main .acerca-de .contenedor .titulo-seccion h2 {
     margin-bottom: 0;
-    
+
 }
 
-.main .acerca-de .texto-acerca-de{
+.main .acerca-de .texto-acerca-de {
     width: 66.66%;
     text-align: left;
 }
 
-.main .acerca-de .texto-acerca-de p{
+.main .acerca-de .texto-acerca-de p {
     color: #979797;
     font-size: 1rem;
     font-weight: 400;
@@ -252,7 +258,7 @@ background-attachment: fixed;
 
 /*slider*/
 
-.main .contenedor-slider{
+.main .contenedor-slider {
     width: 100%;
     overflow: hidden;
     background: #f3f4fa;
@@ -260,26 +266,28 @@ background-attachment: fixed;
     position: relative;
 }
 
-.main .contenedor-slider .slider{
+.main .contenedor-slider .slider {
     width: 400%;
     display: flex;
 }
 
-.main .contenedor-slider .slider .slide{
+.main .contenedor-slider .slider .slide {
     width: 15%;
     max-width: 950px;
     margin-right: 0.7%;
     box-shadow: 0px 20px 40px #aaa;
 
 }
-.main .contenedor-slider .slider .slide img{
+
+.main .contenedor-slider .slider .slide img {
     width: 100%;
     vertical-align: top;
-    
+
 
 }
 
-.main .contenedor-slider .btn-anterior, .main .contenedor-slider .btn-siguiente{
+.main .contenedor-slider .btn-anterior,
+.main .contenedor-slider .btn-siguiente {
     display: inline-block;
     cursor: pointer;
     position: absolute;
@@ -287,43 +295,45 @@ background-attachment: fixed;
     transform: translateY(-50%);
 }
 
-.main .contenedor-slider .btn-anterior{
+.main .contenedor-slider .btn-anterior {
     left: 2%;
 }
 
-.main .contenedor-slider .btn-siguiente{
+.main .contenedor-slider .btn-siguiente {
     right: 2%;
 }
 
-.main .contenedor-slider .btn-anterior i, .main .contenedor-slider .btn-siguiente i{
+.main .contenedor-slider .btn-anterior i,
+.main .contenedor-slider .btn-siguiente i {
     color: #fff;
 }
 
 
 
-.main .contenedor-slider .btn-anterior i:hover, .main .contenedor-slider .btn-siguiente i:hover{
+.main .contenedor-slider .btn-anterior i:hover,
+.main .contenedor-slider .btn-siguiente i:hover {
     color: #0089E0;
 }
 
 
 /*nuestro equipo*/
 
-.main .nuestro-equipo{
+.main .nuestro-equipo {
     background: #f3f4fA;
     padding-top: 54px;
     padding-bottom: 108px;
 
 }
 
-.main .nuestro-equipo .equipo{
+.main .nuestro-equipo .equipo {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    
+
 }
 
-.main .nuestro-equipo .equipo .persona-equipo{
+.main .nuestro-equipo .equipo .persona-equipo {
     background: #fff;
     padding: 50px;
     width: 100%;
@@ -332,27 +342,432 @@ background-attachment: fixed;
     text-align: center;
 }
 
-.main .nuestro-equipo .equipo .persona-equipo .foto{
+.main .nuestro-equipo .equipo .persona-equipo .foto {
     width: 50%;
     max-width: 100px;
     display: inline-block;
     margin-bottom: 10px;
 }
 
-.main .nuestro-equipo .equipo .persona-equipo .foto img{
+.main .nuestro-equipo .equipo .persona-equipo .foto img {
     width: 100%;
     border-radius: 100%;
 }
 
-.main .nuestro-equipo .equipo .persona-equipo .texto h3{
+.main .nuestro-equipo .equipo .persona-equipo .texto h3 {
     font-size: 1.3rem;
     font-weight: 500;
-    color:  #0089e0;
+    color: #0089e0;
 }
 
-.main .nuestro-equipo .equipo .persona-equipo .texto h4{
+.main .nuestro-equipo .equipo .persona-equipo .texto h4 {
     color: #979797;
     font-size: 0.8rem;
     font-weight: 400;
     margin-bottom: 15px;
+}
+
+/*seccion informacion extra*/
+
+.main .info-extra {
+    background: #191919;
+    padding: 130px 0px;
+}
+
+.main .info-extra .contenedor {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.main .info-extra .contenedor .info {
+    width: 50%;
+
+}
+
+.main .info-extra .contenedor .info .contenido-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+
+}
+
+.main .info-extra .contenedor .info .contenido-info:first-child {
+    margin-bottom: 30px;
+}
+
+.main .info-extra .contenedor .info .contenido-info .icono-info {
+    width: 5%;
+}
+
+.main .info-extra .contenedor .info .contenido-info .icono-info i {
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.main .info-extra .contenedor .info .contenido-info .texto-info {
+    margin-left: 3%;
+
+}
+
+.main .info-extra .contenedor .info .contenido-info .texto-info h4 {
+    font-size: 1.875rem;
+    line-height: 24px;
+    color: white;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.main .info-extra .contenedor .info .contenido-info .texto-info p {
+    color: #979797;
+    font-size: 1rem;
+    font-weight: 400;
+
+}
+
+.main .info-extra .contenedor .foto {
+    width: 50%;
+    height: 300px;
+    box-shadow: 0px 9px 32px -1px rgba(0, 0, 0, 0.5);
+    background-image: url(../img/info-foto.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+
+/*seccion de contacto*/
+
+.main .contacto {
+    padding: 190px 0;
+    background-image: url(../img/bg-contacto.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.main .contacto .contenedor-formulario {
+    background: #fff;
+    min-height: 485px;
+    border-radius: 3px;
+    box-shadow: 0px 9px 32px -1px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: space-between;
+
+}
+
+
+.main .contacto .contenedor-formulario .formulario {
+    width: 50%;
+    padding: 70px;
+}
+
+.main .contacto .contenedor-formulario .formulario h2 {
+    font-size: 1.375rem;
+    line-height: 24px;
+    color: #0089E0;
+    font-weight: 500;
+    margin-bottom: 10px;
+
+}
+
+.main .contacto .contenedor-formulario .formulario p {
+    color: #979797;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.main .contacto .contenedor-formulario .formulario form input[type=text],
+.main .contacto .contenedor-formulario .formulario form input[type=email] {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+    outline: none;
+    width: 100%;
+    margin-bottom: 10px;
+    color: #979797;
+    font-size: 0.9rem;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
+
+
+.main .contacto .contenedor-formulario .formulario form textarea {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+    outline: none;
+    width: 100%;
+    max-width: 100%;
+    max-height: 88px;
+    min-height: 88px;
+    color: #979797;
+    margin-bottom: 10px;
+    font-size: 0.9rem;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 0;
+}
+
+.main .contacto .contenedor-formulario .formulario form input[type="submit"] {
+    width: 100%;
+    border: none;
+    border: 1px solid #0089E0;
+    padding: 8px;
+    background: #0089e0;
+    color: #fff;
+    font-size: 0.9rem;
+    font-family: 'poppins' sans-serif;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition: all .5s ease;
+
+}
+
+.main .contacto .contenedor-formulario .formulario form input[type="submit"]:hover {
+    background: #fff;
+    color: #0089E0;
+}
+
+.main .contacto .contenedor-formulario .foto {
+    width: 50%;
+    background-image: url('../img/foto-contacto.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+
+/*--------PIE DE  PAGINA---------*/
+
+footer {
+    background: #f3f4fA;
+    padding: 54px 0;
+    text-align: center;
+}
+
+footer .copy {
+    color: #979797;
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+footer .footer-redes a {
+    display: inline-flex;
+    padding: 0 10px;
+    color: #979797;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 0.875rem;
+    letter-spacing: 0;
+    line-height: 1.5em;
+    transform: all .3s ease;
+
+}
+
+footer .footer-redes a:hover {
+    color: #0089E0;
+}
+
+
+/*--------MEDIA QUERY----------*/
+
+@media screen and (max-width:1040px) {
+    /*nuestro equipo*/
+
+    .main .nuestro-equipo .titulo-seccion {
+        margin-bottom: 60px;
+
+    }
+
+    .main .nuestro-equipo .equipo .persona-equipo {
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        text-align: left;
+    }
+
+    .main .nuestro-equipo .equipo .persona-equipo:first-child {
+        top: -20px;
+    }
+
+    .main .nuestro-equipo .equipo .persona-equipo .foto {
+        margin-right: 20px;
+
+    }
+
+    /*info extra*/
+
+    .main .info-extra .contenedor .info {
+        width: 100%;
+    }
+
+    .main .info-extra .contenedor .foto {
+        display: none;
+
+    }
+
+
+}
+
+
+@media screen and (max-width:900px) {
+    /*encabezado*/
+
+    .menu-bar-pc {
+        display: none;
+    }
+
+    .menu-mobile {
+        display: block;
+        width: 100%;
+        padding: 5px 18px;
+        background: #fff;
+        color: #444444;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+
+
+    }
+
+    .menu-mobile .barra {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+    }
+
+    .menu-mobile .barra .logo {
+        width: 40px;
+    }
+
+    .menu-mobile .barra a i {
+        font-size: 1.4rem;
+        color: #444444;
+    }
+
+    .menu-mobile .menu-principal {
+
+        width: 80%;
+        display: block;
+        position: fixed;
+        top: 56px;
+        left: -100%;
+        border-bottom: 1px solid rgba(204, 204, 204, 0.5);
+        border-right: 1px solid rgba(204, 204, 204, 0.5);
+        box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.2);
+        background: #fff;
+        text-align: center;
+    }
+
+    .menu-mobile .menu-principal a {
+        display: block;
+        padding: 10px;
+        color: #444444;
+        border-bottom: 1px solid rgba(204, 204, 204, 0.5);
+    }
+
+    .menu-mobile .menu-principal a:hover {
+        background: #f7f7f7;
+
+    }
+
+    .fixed-header {
+        display: none;
+    }
+
+    /*main*/
+
+    .main {
+        margin-top: 0;
+    }
+
+    /*acercade*/
+
+    .main .acerca-de .contenedor .titulo-seccion,
+    .main .acerca-de .contenedor .texto-acerca-de {
+        width: 100%;
+        text-align: center;
+
+    }
+
+    /*contacto*/
+
+    .main .contacto .contenedor-formulario .formulario {
+        width: 100%;
+        text-align: center;
+    }
+
+    .main .contacto .contenedor-formulario .foto {
+        display: none;
+    }
+
+    .main .contacto .contenedor-formulario .formulario form input[type=text],
+    .main .contacto .contenedor-formulario .formulario form input[type=email],
+    .main .contacto .contenedor-formulario .formulario form textarea {
+        text-align: center;
+    }
+
+}
+
+@media screen and (max-width:550px) {
+
+    /*Banner principal*/
+    .main .banner-principal .texto-banner h1 {
+        font-size: 4rem;
+    }
+
+    /*Titulo secciones*/
+    .titulo-seccion h2 {
+        font-size: 2.125rem;
+    }
+
+    /*Proyectos*/
+    .main .proyectos .galeria-proyectos .proyectos {
+        width: 49%;
+    }
+
+    /*Nuestro equipo*/
+    .main .nuestro-equipo .equipo .persona-equipo {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    /*Sección información extra*/
+    .main .info-extra .contenedor .info .contenido-info {
+        flex-wrap: wrap;
+        text-align: center;
+    }
+
+    .main .info-extra .contenedor .info .contenido-info .icono-info {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .main .info-extra .contenedor .info .contenido-info .icono-info i {
+        font-size: 3.5rem;
+    }
+
+    .main .info-extra .contenedor .info .contenido-info .texto-info {
+        margin-left: 0;
+    }
+
+    .main .info-extra .contenedor .info .contenido-info .texto-info h4 {
+        font-size: 1.175rem;
+    }
+
+    .main .info-extra .contenedor .info .contenido-info:first-child {
+        margin-bottom: 40px;
+    }
+
+    /*Contacto*/
+    .main .contacto .contenedor-formulario .formulario {
+        padding: 70px 40px;
+    }
 }
